orders/orders-ms/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-ms-service
  labels:
    app: orders-ms-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004
  selector:
    app: orders-ms-deployment
