orders/orders-ms/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: orders-ms.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-ms-service
                port:
                  number: 4004
